// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util parseURL() blob page 1`] = `
Object {
  "pageType": "blob",
  "repoName": "github.com/sourcegraph/sourcegraph",
  "revAndFilePath": "3.3/shared/src/hover/HoverOverlay.tsx",
}
`;

exports[`util parseURL() branch name with forward slashes 1`] = `
Object {
  "pageType": "blob",
  "repoName": "ghe.sgdev.org/beyang/mux",
  "revAndFilePath": "jr/branch/mux.go",
}
`;

exports[`util parseURL() commit page 1`] = `
Object {
  "pageType": "commit",
  "repoName": "github.com/sourcegraph/sourcegraph",
}
`;

exports[`util parseURL() compare page 1`] = `
Object {
  "pageType": "compare",
  "repoName": "github.com/sourcegraph/sourcegraph-basic-code-intel",
}
`;

exports[`util parseURL() pull request list 1`] = `
Object {
  "pageType": "other",
  "repoName": "github.com/sourcegraph/sourcegraph",
}
`;

exports[`util parseURL() pull request page 1`] = `
Object {
  "pageType": "pull",
  "repoName": "github.com/sourcegraph/sourcegraph",
}
`;

exports[`util parseURL() selections - range 1`] = `
Object {
  "pageType": "blob",
  "repoName": "github.com/sourcegraph/sourcegraph",
  "revAndFilePath": "master/jest.config.base.js",
}
`;

exports[`util parseURL() selections - single line 1`] = `
Object {
  "pageType": "blob",
  "repoName": "github.com/sourcegraph/sourcegraph",
  "revAndFilePath": "master/jest.config.base.js",
}
`;

exports[`util parseURL() snippet permalink 1`] = `
Object {
  "pageType": "blob",
  "repoName": "github.com/sourcegraph/sourcegraph",
  "revAndFilePath": "6a91ccec97a46bfb511b7ff58d790554a7d075c8/client/browser/src/shared/repo/backend.tsx",
}
`;

exports[`util parseURL() tree page 1`] = `
Object {
  "pageType": "tree",
  "repoName": "github.com/sourcegraph/sourcegraph",
}
`;

exports[`util parseURL() wiki page 1`] = `
Object {
  "pageType": "other",
  "repoName": "github.com/sourcegraph/sourcegraph",
}
`;
